versioned_docs/version-0.12/enterprise/install/releases.mdx
---
title: Okteto Enterprise Release Notes
description: Okteto Enterprise Release Notes
sidebar_label: Release Notes
id: releases
---

## 0.12.0
May 19, 2022

### Improvements
- Okteto daemonset no longer mounts host volumes nor runs in privilege mode
- Add support for [GKE workload identity](https://cloud.google.com/kubernetes-engine/docs/concepts/workload-identity)
- Use `ingressClassName` field for ingresses instead of the deprecated `kubernetes.io/ingress.class` annotation
- Add [network quotas](/docs/0.12/enterprise/administration/configuration/#quotas) for okteto up
- Invalid ingresses not accepted by the nginx ingress controller are now caught by the webhook
- Deploying daemonset is no longer allowed by default
- Ingresses are put to sleep alongside all other namespace resources and automatically wake by with incoming requests
- Improve pipeline jobs lifecycle and properly handle timeouts. Logs for pipelines that time out are no longer lost
- Account for "ready" container condition to check if a component is healthy
- Decouple computing overloaded nodes from the autoscaler
- Allow users to type in custom branch name for Github repository in the deploy modal
- Add delete button to preview list
- Fix inaccesible modal elements on small screens
- Upgrade to Okteto CLI 2.2.2
- Upgrade ingress-nginx helm chart to 4.1.0

### Bugfixes
- Fix a panic in the mutation webhook for pods with no labels
- Minor UI fixes for deploy's branch selector

### Breaking changes
- Ingresses using the `kubernetes.io/ingress.class` annotation will be automatically updated by the okteto webhook and saved as `spec.ingressClassName` with the annotation removed

## 0.11.1
May 6, 2022

### Bugfixes
- Provides a buildkit update for addressing authentication issues when building images.

## 0.11.0
April 7, 2022

### Features
- Add support for [Okteto Manifest v2](/docs/reference/manifest/)
- Allow [custom affinities](/docs/0.12/enterprise/administration/configuration/#affinities) in application pods
- Allow to "Wake" previews from the Okteto UI
- Add support for [Buildkit HPA](/docs/0.12/enterprise/administration/configuration/#buildkit) (Horizontal Pod Autoscaler)

### Improvements
- Avoid placing okteto components in overloaded nodes if used in a single node pool
- Reduce Buildkit liveness initial delay from 5m to 10s
- Add resource quotas to jobs and cronjobs
- Migrate cronjobs to use batch/v1 GV as per v1.25 [deprecation guide](https://kubernetes.io/docs/reference/using-api/deprecation-guide/#v1-25). Backwards compatibility still given for kubernetes versions < 1.21.
- Display current Okteto Enterprise version in Admin view
- Pipeline installer can deploy from "okteto-compose.yml" files

### Bugfixes
- Automatically reload mutation webhook when internal certificates expire
- Fix service resource creating with NodePort defined

## 0.10.8
March 2, 2022

### Features
- You can now set a dedicated [quota](/docs/0.10/enterprise/administration/configuration/#quotas) for the number of ingresses per namespace.

### Improvements
- Okteto CLI, used in pipeline installer jobs, is now version 1.15.3.
- Helm version 3.8.0 is now provided in the pipeline installer jobs.
- The config reloader has been upgraded to v0.0.104.
- The installation's public SSH key is now in the admin panel.
- Okteto control components have now set default requests for the resources. This will improve the reliability and performance of the okteto components when the control plane and user applications are using the same pool.

### Bugfixes
- Schedule next pipeline action when a stuck pipeline is marked as errored

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.8.tgz

## 0.10.7
January 20, 2022

### Features
- Bazel is now included as part of the available tools in pipeline installer jobs. The version is 4.2.2.
- An option to sleep your namespace is now available from the user interface.
- Logs for each stage in a pipeline are now clearly marked.
- Pipeline log are now streaming.
- Daemonsets are now supported.

### Improvements
- Okteto CLI, used in pipeline installer jobs, is now version 1.14.10.
- The deploy dialog has been re-designed.
- The ability to directly deploy a docker compose file from the dialog is removed.
- Helm version 3.7.1 now provided in the pipeline installer jobs.
- Ingress controller upgraded to 4.0.11.

### Bugfixes
- Repos with underscores in their name are now supported for deployments.
- Invited users, that have not yet logged in, appear in the admin panel.
- Fixed incorrect 403 when a new user's first action is to use a private endpoint.
- Better handling of unsupported storage class.
- Cert manager resources no longer prevent re-installation of helm chart in certain cases.
- Loadbalancer services are fixed for AWS EKS installations.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.7.tgz

## 0.10.6
November 19, 2021

### Features
- Logs when deploying a Git repository shown in streaming.
- You can now destroy all the resources in a namespace via the **Destroy All** button.
- Show namespace/preview status in the UI.
- Deactivate namespaces from the Admin view.
- Add development mode icons to StatefulSets in the Okteto UI.

### Bugfixes
- Fix 401 error handler when using private endpoints.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.6.tgz

## 0.10.5
October 22, 2021

### Features
- Support for self-signed certificates.
- Namespaces in the terminating status are not considered towards quotas, or garbage collected.

### Bugfixes
- Fixed issue that prevented some users from accessing global preview environments.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.5.tgz

## 0.10.4
September 30, 2021

### Features
- Buildkit stickiness builds based on the namespace.
- Support for updating user email.
- Upgrade Helm to 3.7.0.
- Upgrade Okteto CLI to 1.14.1.

### Bugfixes
- Fixed issue that prevented volumes from deletion when destroying a pipeline.
- Buildkit liveness probe is now correctly handled.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.4.tgz

## 0.10.3
September 24, 2021

### Features
- Streaming logs for application logs.
- You can now use [okteto.global](/docs/0.10/cloud/registry/) when pushing and pulling cluster-wide images.
- Upgrade to Nginx v4.0.2.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.3.tgz

## 0.10.2
September 17, 2021

### Features
- Support for ECR private registries with automatic refresh of credentials every 4h.
- Pipeline destroy operations take precedence over running deploy pipelines.
- Show garbage collector and autoscaler configuration in the Admin view.
- `Wake` global preview environments from the Okteto dashboard.

### Bugfixes
- Increase Buildkit readiness probe timeout to avoid false negatives.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.2.tgz

## 0.10.1
September 13, 2021

### Features
- The [Okteto Autoscaler](/docs/0.10/enterprise/administration/configuration/#autoscaler) now scales based on pod count and volumes-attached.
- Upgrade to Okteto CLI 1.13.11.

### Bugfixes
- Fix compatibility with Okteto CLI <= 1.13.8.
- Fix duplicated endpoints for Istio virtual services.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.1.tgz

## 0.10.0
September 7, 2021

### Features
- Okteto Enterprise now uses the [ingress-nginx](https://artifacthub.io/packages/helm/ingress-nginx/ingress-nginx) Helm chart.
- Upgrade to `cert-manager` 1.5.2.
- Upgrade to `reloader` 0.0.99.
- Support for `networkingv1.Ingress` resources.
- The Admin View now includes information on the autoscaler and the garbage collector.
- Okteto Enterprise will now queue your pipeline if another pipeline for the same namespace and repository is already in progress.
- If the Okteto Enterprise is configured to use [ECR credentials](/docs/0.10/enterprise/administration/configuration/#privateregistry) when pulling images, Okteto Enterprise will automatically refresh the credentials every 4 hours.
- Improved error messages for preview environments.
- Performance improvements on how Okteto queries Kubernetes resources.
- You can now [enable host networking](/docs/0.10/enterprise/administration/configuration/#webhook) in the webhook. Use this if running in AWS with overlay networking.
- You can now configure the [podManagementPolicy](/docs/0.10/enterprise/administration/configuration/#buildkit) of the buildkit service.
- Fixed all CRITICAL and HIGH vulnerabilities reported as of September 6th.

### Bugfixes
- Buildkit now has a more robust liveness check.
- Custom Labels and Annotations are now kept when a namespace is put to sleep or awakened.
- Fix installation in DigitalOcean Kubernetes 1.21

### Upgrade notes

Upgrading to 0.10.0 introduces a breaking change on the NGINX Ingress configuration. Please carefully review our [upgrade guide](/docs/0.10/enterprise/install/upgrade/) before upgrading your Okteto Enterprise instance.

Okteto Enterprise 0.10.0+ requires Kubernetes 1.19+. Older Kubernetes versions are no longer supported.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.10.0.tgz

## 0.9.8
August 12, 2021

### Features
- The preview environments list now displays the owner, endpoints,and link to the pull/merge request of each preview environment.
- You can now share preview environments from the dashboard.
- You can now give your team one-click access to their public and private repositories by using our new GitHub integration.
- You can now configure Okteto Enterprise to [inject extra annotations and labels](/docs/0.10/enterprise/administration/configuration/#namespace) to the namespaces it creates.
- `cue` and `wait-for-it` are now available [on the git pipelines](/docs/0.10/cloud/okteto-pipeline/#built-in-tools).
- You can set deployment and statefulsets as [persistent](/docs/0.10/enterprise/administration/cleanup/#persistent-resources).

### Bugfixes
- Fixed the name of the configuration key used [to enable and disable `userDefinedNamespaces`](/docs/0.10/enterprise/administration/configuration/#userdefinednamespaces).

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.8.tgz

## 0.9.7
July 30, 2021

### Features
- Support for Kubernetes 1.21.
- Preview environments now have [a dedicated section in the dashboard](/docs/0.10/cloud/preview-environments/preview-environments/).
- Support for the deploy preview environment and destroy preview environments [GitHub actions](/docs/0.10/cloud/github-actions/#available-actions).
- The first user to log in to Okteto Enterprise will be [automatically promoted to administrator](/docs/0.10/enterprise/administration/dashboard/).
- Updated version of the registry.
- The buildkit pods won't be marked as ready until buildkit finishes preparing the cache.


### Bugfixes
- Fixed memory leak in the API service.
- You can now use IAM roles to give the registry access to S3 buckets.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.7.tgz

## 0.9.6
July 16, 2021

### Features
- You can now [bring your own certificates](/docs/0.10/enterprise/administration/certificates/) to Okteto.
- You can now block [outgoing traffic to other networks](/docs/0.10/enterprise/administration/configuration/#networkpolicies).
- The logs in the dashboard now include pod events, to help you troubleshoot start issues in your applications and development environments.
- Upgrade to Helm 3.6.3.


### Bugfixes
- Buildkit is properly configured when using `fullnameOverride` in your Helm configuration file.
- Delete duplicated CRDs.
- Fixed templating issues that prevented Flux from installing Okteto Enterprise.
- Use pod affinities to force development environments with volumes to be scheduled on the same node.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.6.tgz

## 0.9.5
July 2, 2021

### Features
- You can now define `deploy` and `destroy` commands on the [pipeline manifest](/docs/0.10/cloud/okteto-pipeline/#schema-reference).
- You can now place your pipeline manifest in a `.okteto` folder at the root of the git repository.
- You can now set a dedicated quota for [volume snapshots](/docs/0.10/enterprise/administration/configuration/#volumes).
- You can now [configure the timeout](/docs/0.10/enterprise/administration/configuration/#installer) of the Okteto pipelines.
- Upgrade to Helm 3.6.2

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.5.tgz

## 0.9.4
June 17, 2021

### Features
- Support for diverted development environments
- Update the default values of the autoscaler component
- Update error messages for clarity
- The dashboard subscribes for namespace changes instead of polling for them
- Updates on how Okteto labels volumes to prevent race conditions
- Support for local SSD for the buildkit statefulset
- The `frontend` image now uses `nginx:1.21` as its base
- The `cloudbin` image now uses `scratch` as its base to reduce dependencies and potential vulnerabilities
- Upgrade to Helm 3.6.1

### Bugfixes
- Okteto Enterprise honors the value of `bin` coming from `okteto up`
- GC jobs no longer run concurrently

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.4.tgz

## 0.9.3
June 7, 2021

### Features
- Telemetry now collects the authentication mechanism and the name of the cloud provider
- The default dev role now includes `watch`
- Set the deployment strategy to `recreate` when running `okteto up`
- Upgrade to Okteto CLI 1.12.15
- Upgrade to Kubectl 1.21.0 and Helm 3.6.0

### Bugfixes
- Don't scale down namespaces with active `okteto up` sessions

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.3.tgz

## 0.9.2
May 28, 2021

### Features
- Pods are now displayed in the dashboard
- The public SSH key of the cluster is now displayed [in the Integrations page](/docs/0.10/enterprise/administration/private-repositories/ssh-key/#add-the-public-key-to-your-source-code-provider)
- The `Pulling` status is now included in the Okteto UI
- You can now define a [storage class](/docs/0.10/enterprise/administration/configuration/#devstorageclass) for all the volumes created by `okteto up`
- You can now define a private certificate authority when bringing your own certificates
- Development environments are automatically logged into the Okteto Registry when [Docker is enabled](/docs/0.10/reference/manifest/#docker-object-optional)
- You can now define yor own script to be executed during the `okteto up` sequence
- The okteto backend image now uses `Scratch` as the base OS to cut down dependencies
- Certificates will be renewed 25 days before expiration by default
- Upgrade to Okteto CLI 1.12.14

### Bugfixes
- Autoscaler now uses the annotation `cluster-autoscaler.kubernetes.io/scale-down-disabled` to ensure a minimum number of nodes are available
- Fixed the node mapping between pods and volumes when using CSI drivers

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.9.2.tgz

## 0.8.7
May 14, 2021

### Features
- Upgrade to Okteto CLI 1.12.12
- Improved support for deploying environments using Docker Compose manifests.
- [Added support for Docker-In-Docker](/docs/0.10/reference/manifest/#docker-object-optional) for development environments running in Okteto Enterprise

### Bugfixes
- The Deploy Docker Compose dialog works correctly when using Safari
- Permission error when writing to Okteto Stack volumes
- Ingress annotations are now properly propagated to the registry ingress

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.7.tgz

## 0.8.6
May 8, 2021

### Features

- Support for variables on Okteto Pipelines
- Quickstarts configuration now includes branches and default variables
- Upgrade to Okteto CLI 1.12.10
- Upgrade to Buildkit 0.8.3

### Bugfixes
- Improvements in the UI to share namespaces

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.6.tgz

## 0.8.4
April 26, 2021

### Features

- Support for Docker Compose files
- Istio's Virtual Services are included in the application endpoints list
- Upgrade to `cert-manager` 1.3.0
- Okteto Enterprise now requires Kubernetes v1.16.0 or newer

### Bugfixes
- Improvements in the UI

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.4.tgz

## 0.8.3
April 9, 2021

### Features

- Support for [personal access tokens](/docs/0.10/cloud/personal-access-tokens/)
- Obfuscate Okteto Secrets from Okteto Pipeline execution logs
- Update Okteto CLI to 1.12.6 in Okteto Pipeline executions
- Support for using [a secret](/docs/0.10/enterprise/install/deployment/#cloud-provider-secret) to define sensitive Okteto values
- Support for [restoring Volume Snapshots by name](/docs/0.10/enterprise/administration/volume-snapshots/#consuming-a-volume-snapshot-created-in-kubernetes)

### Bugfixes
- Remove "redacted" from Git repositories URLs
- Mark pipelines stuck in progressing/destroying as errored

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.3.tgz


## 0.8.2
March 29, 2021

### Bugfixes
- Upgrade Okteto CLI binary to 1.12.2 to fix a regression on how image names are inferred on Okteto Stacks

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.2.tgz


## 0.8.1
March 26, 2021

### Bugfixes
- Upgrade Okteto CLI binary to 1.12.1 to fix a regression on the labels used by Okteto Stacks

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.1.tgz


## 0.8.0
March 25, 2021

### Features

- The frontend and daemonset now run on the `default` service account, with limited privileges
- All the sensitive configuration values are now stored in the `okteto-enterprise` Kubernetes secret
- Okteto Stacks now directly create Kubernetes resources instead of using Helm
- Administrators can mark namespaces as `persistent` in the [admin dashboard](/docs/0.10/enterprise/administration/dashboard/) to prevent them from being automatically scaled to zero or deleted
- The dashboard shows the state of the pipeline and the state of the components
- The dashboard now supports collapsing the pipelines
- The certificate issuer now supports [using an assumed role for AWS](/docs/0.10/enterprise/administration/configuration/#cloud) instead of access keys

### Bugfixes
- Fixed issues deleting resources created by the pipelines
- Fixed layout issues with the deploy dialog

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.8.0.tgz


## 0.7.10
March 12, 2021

### Features

- Upgrade to Buildkit 0.8.2
- All the applications in a namespace [awake automatically](/docs/0.10/enterprise/administration/cleanup/) when they receive a request
- The error pages include information on the application's status (unavailable, sleeping, restarting) and display troubleshooting information
- You can now specify extra annotations and labels for all the components
- You can now [override the IP](/docs/0.10/enterprise/administration/configuration/#ingress) the pods use to communicate with the Okteto API and the Okteto Registry
- You can now [override the serviceAccountName](/docs/0.10/enterprise/administration/configuration/#registry) of the registry deployment

### Bugfixes
- Helm releases with a dash in the name are parsed correctly
- The garbage collector no longer deletes the migration job and pods
- Helm creates a separate service account when token-based authentication is enabled

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.10.tgz


## 0.7.9
March 5, 2021

### Features

- Support for Kubernetes 1.19
- All the applications in a namespace [awaken automatically](/docs/0.10/enterprise/administration/cleanup/) when there's an action in the namespace
- You can now control the schedule, increment size, minimum size, and maximum size of [the autoscaler](/docs/0.10/enterprise/administration/configuration/#autoscaler)
- [A new configuration](/docs/0.10/enterprise/administration/configuration/#convertloadbalancedservices) to disable the automatic conversion of LoadBalanced services into ClusterIP
- [A new configuration](/docs/0.10/enterprise/administration/configuration/#ingress) to disable ingress class overwrite. This is useful when running multiple ingress controllers in your Kubernetes cluster

### Bugfixes
- Scrollbars are now easier to click on high-res screens

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.9.tgz


## 0.7.8
February 22, 2021

### Features
- Support for restore volumes from snapshots
- Support for cronjobs in the Okteto UI
- Private registry credentials available in git deploy jobs

### Bugfixes
- Fix issues in namespace layout to avoid logs area to be hidden
- Fix sorting of users in Admin view

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.8.tgz


## 0.7.7
February 5, 2021

### Features
- Awake namespaces and applications directly from the dashboard
- The ingress class of the ingresses managed by Okteto is now customizable
- The daemonset is only deployed in the nodes with the devPool toleration
- The privateRegistry configuration is now compatible with registries that require tokens for authentication

### Bugfixes
- Handle the error in the admin dashboard when the metrics server is not available

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.7.tgz


## 0.7.6
January 30, 2021

### Features
- The dashboard now supports filtering logs by pod
- The dashboard now supports running `okteto down` directly from there
- The dashboard now gives you an option to destroy attached volumes together with the application
- Support for Azure Storage for the Okteto Registry
- Login with Okta, GitLab, Ping, Dex, or any other OpenID provider
- You can now enable/disable the cluster-wide changes that the daemon set applies
- Dev environments will automatically use the internal network when connecting to the build and registry services
- Upgraded to cert-manager v1.1.0

### Bugfixes
- Fixed the "Operation not progressing" error message when deploying statefulsets

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.6.tgz


## 0.7.5
January 17, 2021

### Features
- Support for Digital Ocean Spaces for the Okteto Registry
- Login with bitbucket as the identity provider
- Logs view filters and UI improvements
- Increase default git deploy timeout from 15min to 30min

### Bugfixes
- Only display `In Development` status if a resource is in running state.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.5.tgz


## 0.7.4
January 6, 2021

### Features
- The admin view also shows namespace and user count, as well as information on your license
- Users can define secrets at the cluster level, instead of at the user level
- Configure a policy to make images available across namespaces
- You can now customize the shortcut displayed in the "Deploy from Git Repository" dialog
- You can now use OpenID Connect providers for authentication

### Bugfixes
- Only show active users in the admin dashboard

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.4.tgz


## 0.7.3
December 11, 2020

### Features
- Display YAML for volumes and charts in the UI
- Install Okteto in air-gapped clusters
- Upgrade helm and okteto dependencies

### Bugfixes
- Specify the secret name in all the ingresses created by the installation

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.3.tgz


## 0.7.1
November 30, 2020

### Features
- Jobs and pods are now displayed in the dashboard
- Volumes created by `okteto up` now show the `dev-mode` badge
- Okteto Pipelines now fallback to the repository's default branch if none is specified
- The default network policy now allows for namespaces from the same owner to access each other
- Quotas and Policies are easier to configure now
- Single buildkit pod for both external and internal requests
- Support to limit login based on GitHub Organization membership
- Support for [Civo Cloud](https://www.civo.com/) and K3s
- Okteto Enterprise is now also available via [Artifact Hub](https://artifacthub.io/packages/helm/okteto/okteto-enterprise)

### Bugfixes
- Run migration job when configuration values change

### Upgrade notes (from `0.5.x`)
- Due to changes in [Cert Manager](https://cert-manager.io/), you'll need to manually delete some resources before upgrading. Please review the [installation and upgrade guides](/docs/0.10/enterprise/install/overview/) before upgrading.
- New CRDs are included with this release. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.7.1.tgz


## 0.6.2
September 15, 2020

### Features
- [Private Endpoints](/docs/0.10/cloud/private-endpoints/)
- Upgrade to buildkit 0.7.2
- Support starting Okteto Pipelines from the `okteto` cli and [GitHub Actions](/docs/0.10/cloud/github-actions/)
- Username, user id, email, and commit sha are available as environment variables [in okteto pipelines](/docs/0.10/cloud/okteto-pipeline/)
- Add the okteto helm catalog to the pipelines by default

### Bugfixes
- Truncate logs if they are too big to prevent memory issues
- Fix name clash when creating role bindings
- Reload the frontend on API breaking changes
- Improved handling of API errors
- Reduce severity of 'pod not found' errors

### Upgrade notes (from `0.5.x`)
- Due to changes in [Cert Manager](https://cert-manager.io/), you'll need to manually delete some resources before upgrading. Please review the [installation and upgrade guides](/docs/0.10/enterprise/install/overview/) before upgrading.
- New CRDs are included with this release. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.6.2.tgz


## 0.6.1
August 20, 2020

### Features
- Improved backward compatibility with `okteto` CLI
- Use `helm` 3.3.0 for deployment pipelines

### Upgrade notes (from `0.5.x`)
- Due to changes in [Cert Manager](https://cert-manager.io/), you'll need to manually delete some resources before upgrading. Please review the [installation and upgrade guides](/docs/0.10/enterprise/install/overview/) before upgrading.
- New CRDs are included with this release. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.6.1.tgz


## 0.6.0
August 11, 2020

### Features
- Upgraded NGINX-ingress to v1.4.1
- Upgraded cert-manager to v0.16.0
- Deploy application from Git repositories
- Updated `helm`, `kubectl` and `okteto` binaries
- Usability and UI improvements
- Support for using `okteto.dev` as a shortcut for the registry of a namespace

### Bugfixes
- Truncate log lines with more than 800 characters to prevent performance issues with the UI
- Set buildkit cache size as a config value

### Upgrade notes
- Due to changes in  [Cert Manager](https://cert-manager.io/), you'll need to manually delete some resources before upgrading. Please review the [installation and upgrade guides](/docs/0.10/enterprise/install/overview/) before upgrading.
- New CRDs are included with this release. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.6.0.tgz


## 0.5.3
July 06, 2020

### Features
- `supervisor` process now logs `okteto up` output using JSON
- Updated `helm`, `kubectl` and `okteto` binaries
- Pin docker registry to `2.7.1`

### Bugfixes
- Fix compatibility issue with `okteto` 1.8.14

### Upgrade notes

The configuration values have changed from the `0.4.x` and older releases. Please review the [installation guide](/docs/0.10/enterprise/install/overview/) before upgrading.
New CRDs have been added. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.5.3.tgz


## 0.5.2
June 18, 2020

### Features
- Automatically delete dev secrets when deleting a deployment from the UI
- Support for network policies in 1.17
- Parameter to make cert-manager and nginx optional

### Bugfixes
- Fix copy/paste of development instructions in the UI

### Upgrade notes

The configuration values have changed from the `0.4.x` and older releases. Please review the [installation guide](/docs/0.10/enterprise/install/overview/) before upgrading.
New CRDs have been added. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.5.2.tgz


## 0.5.1
June 10, 2020

### Features
- Simplified configuration model
- Upgraded NGINX-Ingress to 1.39.1
- Support for using a PVC as well as block storage for the registry
- Wait for certificates to be available before failing
- By default, namespaces are not required to include the username a postfix
- Support for helm charts that create accounts and roles

### Bugfixes
- Don't count existing namespaces when calculating a quota
- Map user to old account if the old service account has been deleted
- Fix UI issues around scrollbars and touch panels
- Support for edge 79
- Add a loader to the application deploy dialog
- Upgrade the allowed size for file uploads

### Upgrade notes

The configuration values have changed from the `0.4.x` and older releases. Please review the [installation guide](/docs/0.10/enterprise/install/overview/) before upgrading.
New CRDs have been added. Please [install them](/docs/0.10/enterprise/install/deployment/#create-the-okteto-namespace) before upgrading.

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.5.1.tgz


## 0.4.0
May 11, 2020

### Features
- Buildkit Service and Container Registry included out of the box
- Support for Okteto Stacks
- Application installer now uses Helm v3.2.0
- Setting to automatically delete unused resources
- API key is now masked in the UI
- Increased throughput in the Webhook
- Quotas are now fully configurable
- Always fail if webhook cannot be executed
- Create an internal certificate for the webhook
- Don't require namespace postfix by default
- Lots of UX improvements

### Bugfixes
- Fixes issues with cross-reference of charts in multiple repositories
- Support helm repositories with sub-paths
- Check connectivity to Kubernetes as part of the healthcheck

### Upgrade notes

The configuration values have changed substantially from the `0.3.x` release. Please review the [installation guide](/docs/0.10/enterprise/install/overview/) before upgrading.

### Known issues
- If the API pods are active before the certificate it's generated, they need to be recreated to pick up the new cert
- Buildkit and Registry pods will fail until a valid certificate is generated

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.4.0.tgz


## 0.3.1
January 27, 2020

### Features
- Support for endpoints of the form `$NAMESPACE.$BASE_DOMAIN`
- Show functions as a first class citizen
- Show attached volumes for deployments, statefulsets and functions
- Only enable buildkit quotas when hard multitenancy is enabled
- Show *developer mode* hints from the UI
- Destroy resources directly from the UI

### Bugfixes
- Delete jobs after execution
- Delete ingresses by label instead of by name
- Compute stateful sets endpoints

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.3.1.tgz


## 0.3.0
January 14, 2020

### Features
- Support for Kubernetes 1.16
- Updated Cert-Manager to v0.12.0 and NGINX Ingress Controller to 1.26.2
- Support for [remote builds with Okteto CLI](/docs/0.10/reference/cli/#build)
- Application installation via the catalog is now 100% faster
- Customize the default application catalog for all users via configuration

### Direct Download
https://charts.okteto.com/okteto-enterprise-0.3.0.tgz


## 0.2.13
October 29, 2019

### Features
- Display the user's quota consumption directly in the UI
- Support for DigitalOcean
- Display status and errors in the UI
- Support for deploying applications directly from the UI
- Updated icons
- Support for [deploying Helm charts](/docs/0.10/cloud/deploy-from-helm/)
- Return 401 on auth issues instead of letting graphql handle the error

### Bugfixes
- Don't capture 404 errors from applications
- Fix caching issues in `index.html`

## Direct Download
https://charts.okteto.com/okteto-enterprise-0.2.13.tgz
